--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         </div>
       </div>
     </section>
+    
 
     <section id="features" class="section">
       <h2>Our Features (Ready Now)</h2>
@@ -87,3 +88,4 @@
   <script src="/shira.js"></script>
 </body>
 </html>
+<meta name="color-scheme" content="light">
