--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-<!doctype html>
+<link rel="manifest" href="/manifest.json" />
+<meta name="theme-color" content="#0b2040" />
+
+<!-- iOS install meta -->
+<link rel="apple-touch-icon" href="/icons/icon-192.png" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" /><!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
