--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<link rel="manifest" href="/manifest.json" />
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#0b2040" />link rel="manifest" href="/manifest.json" />
 <meta name="theme-color" content="#0b2040" />
 
 <!-- iOS install meta -->
@@ -124,6 +129,105 @@
     });
   </script>
 
+  <script src="/app.js"></script>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#0b2040" />
+
+  <!-- iOS install meta -->
+  <link rel="apple-touch-icon" href="/icons/icon-192x192.png" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+
+  <title>SpotAlert Dashboard</title>
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="/styles.css" />
+
+  <!-- OneSignal SDK (Push Notifications) -->
+  <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async></script>
+</head>
+<body>
+  <!-- Header -->
+  <header class="header">
+    <h1>🚨 SpotAlert Dashboard</h1>
+    <nav>
+      <a href="#overview">Overview</a>
+      <a href="#alerts">Alerts</a>
+      <a href="#cameras">Cameras</a>
+      <a href="#settings">Settings</a>
+    </nav>
+  </header>
+
+  <!-- Main Dashboard -->
+  <main class="dashboard">
+
+    <!-- Overview Section -->
+    <section id="overview" class="card">
+      <h2>Overview</h2>
+      <p>Welcome to your SpotAlert dashboard. Monitor alerts, cameras, and system status in real-time.</p>
+      <div class="stats">
+        <div class="stat-box">
+          <h3>Total Alerts</h3>
+          <p id="total-alerts">0</p>
+        </div>
+        <div class="stat-box">
+          <h3>Active Cameras</h3>
+          <p id="active-cameras">0</p>
+        </div>
+        <div class="stat-box">
+          <h3>System Status</h3>
+          <p id="system-status">✅ Online</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Alerts Section -->
+    <section id="alerts" class="card">
+      <h2>Recent Alerts</h2>
+      <ul id="alert-list">
+        <!-- Alerts will be loaded here by app.js -->
+      </ul>
+    </section>
+
+    <!-- Cameras Section -->
+    <section id="cameras" class="card">
+      <h2>Live Cameras</h2>
+      <div id="camera-grid">
+        <!-- Camera feeds go here -->
+        <p>No cameras connected.</p>
+      </div>
+    </section>
+
+    <!-- Settings Section -->
+    <section id="settings" class="card">
+      <h2>Settings</h2>
+      <form id="settings-form">
+        <label>
+          Notifications:
+          <input type="checkbox" id="notif-toggle" checked />
+        </label>
+        <label>
+          Refresh Rate (seconds):
+          <input type="number" id="refresh-rate" value="30" />
+        </label>
+        <button type="submit">Save</button>
+      </form>
+    </section>
+
+  </main>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <p>© 2025 SpotAlert. All rights reserved.</p>
+  </footer>
+
+  <!-- Scripts -->
   <script src="/app.js"></script>
 </body>
 </html>
